# stark

./: CLAUDE.md  Cargo.toml  README.md  lagrange_poly.txt  test_poly_order.rs
benches/: README.md  field_benchmarks.rs  fri_benchmarks.rs  polynomial_benchmarks.rs  stark_benchmarks.rs
src/: lib.rs  main.rs
src/modules/: field.rs  fri.rs  merkle.rs  multivariate_poly.rs  ntt.rs  polynomial.rs  program.rs  proof_stream.rs  rescue_prime.rs  stark.rs  trace_lde.rs  univariate_poly.rs
