[package]
name = "zk_stark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
sha3 = "0.10"
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-traits = "0.2"
bincode = "1.3"